// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Model E2E Test common functions Test app getAncestors() 1`] = `
[
  "app=test",
]
`;

exports[`Model E2E Test common functions Test app getBoundaryMembers() 1`] = `
[
  "app=test",
  "support=nginx,app=test",
  "deployment=nginx@v1,support=nginx,app=test",
  "execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test",
  "image=image:0.0.1,app=test",
  "environment=qa,region=region-1,app=test",
  "region=region-1,app=test",
  "service=testService,app=test",
  "server=backend,app=test",
  "pipeline=testPipeline,app=test",
]
`;

exports[`Model E2E Test common functions Test app getChildren() 1`] = `
[
  "image",
  "pipeline",
  "region",
  "server",
  "service",
  "support",
]
`;

exports[`Model E2E Test common functions Test app getContext() 1`] = `"app=test"`;

exports[`Model E2E Test common functions Test app getParents() 1`] = `[]`;

exports[`Model E2E Test common functions Test app synth() 1`] = `
{
  "name": "test",
}
`;

exports[`Model E2E Test common functions Test deployment getAncestors() 1`] = `
[
  "deployment=nginx@v1,support=nginx,app=test",
  "support=nginx,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test deployment getBoundaryMembers() 1`] = `
[
  "deployment=nginx@v1,support=nginx,app=test",
  "support=nginx,app=test",
  "app=test",
  "execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test",
  "image=image:0.0.1,app=test",
  "environment=qa,region=region-1,app=test",
  "region=region-1,app=test",
]
`;

exports[`Model E2E Test common functions Test deployment getChildren() 1`] = `
[
  "execution",
]
`;

exports[`Model E2E Test common functions Test deployment getContext() 1`] = `"deployment=nginx@v1,support=nginx,app=test"`;

exports[`Model E2E Test common functions Test deployment getParents() 1`] = `
[
  "support",
]
`;

exports[`Model E2E Test common functions Test deployment synth() 1`] = `
{
  "deploymentTag": "nginx@v1",
}
`;

exports[`Model E2E Test common functions Test environment getAncestors() 1`] = `
[
  "environment=qa,region=region-1,app=test",
  "region=region-1,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test environment getBoundaryMembers() 1`] = `
[
  "environment=qa,region=region-1,app=test",
  "region=region-1,app=test",
  "app=test",
  "execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test",
  "image=image:0.0.1,app=test",
  "deployment=nginx@v1,support=nginx,app=test",
  "support=nginx,app=test",
]
`;

exports[`Model E2E Test common functions Test environment getChildren() 1`] = `
[
  "execution",
]
`;

exports[`Model E2E Test common functions Test environment getContext() 1`] = `"environment=qa,region=region-1,app=test"`;

exports[`Model E2E Test common functions Test environment getParents() 1`] = `
[
  "region",
]
`;

exports[`Model E2E Test common functions Test environment synth() 1`] = `
{
  "environmentName": "qa",
  "environmentVariables": {},
}
`;

exports[`Model E2E Test common functions Test execution getAncestors() 1`] = `
[
  "execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test",
  "image=image:0.0.1,app=test",
  "app=test",
  "environment=qa,region=region-1,app=test",
  "region=region-1,app=test",
  "deployment=nginx@v1,support=nginx,app=test",
  "support=nginx,app=test",
]
`;

exports[`Model E2E Test common functions Test execution getBoundaryMembers() 1`] = `
[
  "execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test",
  "image=image:0.0.1,app=test",
  "app=test",
  "environment=qa,region=region-1,app=test",
  "region=region-1,app=test",
  "deployment=nginx@v1,support=nginx,app=test",
  "support=nginx,app=test",
]
`;

exports[`Model E2E Test common functions Test execution getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test execution getContext() 1`] = `"execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test"`;

exports[`Model E2E Test common functions Test execution getParents() 1`] = `
[
  "deployment",
  "environment",
]
`;

exports[`Model E2E Test common functions Test execution synth() 1`] = `
{
  "deployment": {
    "context": "deployment=nginx@v1,support=nginx,app=test",
  },
  "environment": {
    "context": "environment=qa,region=region-1,app=test",
  },
  "environmentVariables": {},
  "image": {
    "context": "image=image:0.0.1,app=test",
  },
}
`;

exports[`Model E2E Test common functions Test image getAncestors() 1`] = `
[
  "image=image:0.0.1,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test image getBoundaryMembers() 1`] = `
[
  "image=image:0.0.1,app=test",
  "app=test",
  "execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test",
  "environment=qa,region=region-1,app=test",
  "region=region-1,app=test",
  "deployment=nginx@v1,support=nginx,app=test",
  "support=nginx,app=test",
  "server=backend,app=test",
]
`;

exports[`Model E2E Test common functions Test image getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test image getContext() 1`] = `"image=image:0.0.1,app=test"`;

exports[`Model E2E Test common functions Test image getParents() 1`] = `
[
  "app",
]
`;

exports[`Model E2E Test common functions Test image synth() 1`] = `
{
  "dockerOptions": {
    "buildArgs": {},
    "dockerFilePath": "/Dockerfile",
    "quiet": undefined,
  },
  "imageId": "0.0.1",
  "imageName": "image",
  "imageTag": "0.0.1",
}
`;

exports[`Model E2E Test common functions Test pipeline getAncestors() 1`] = `
[
  "pipeline=testPipeline,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test pipeline getBoundaryMembers() 1`] = `
[
  "pipeline=testPipeline,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test pipeline getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test pipeline getContext() 1`] = `"pipeline=testPipeline,app=test"`;

exports[`Model E2E Test common functions Test pipeline getParents() 1`] = `
[
  "app",
]
`;

exports[`Model E2E Test common functions Test pipeline synth() 1`] = `
{
  "instructionSet": [],
  "pipelineName": "testPipeline",
}
`;

exports[`Model E2E Test common functions Test region getAncestors() 1`] = `
[
  "region=region-1,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test region getBoundaryMembers() 1`] = `
[
  "region=region-1,app=test",
  "app=test",
  "environment=qa,region=region-1,app=test",
  "execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test",
  "image=image:0.0.1,app=test",
  "deployment=nginx@v1,support=nginx,app=test",
  "support=nginx,app=test",
]
`;

exports[`Model E2E Test common functions Test region getChildren() 1`] = `
[
  "environment",
]
`;

exports[`Model E2E Test common functions Test region getContext() 1`] = `"region=region-1,app=test"`;

exports[`Model E2E Test common functions Test region getParents() 1`] = `
[
  "app",
]
`;

exports[`Model E2E Test common functions Test region synth() 1`] = `
{
  "regionId": "region-1",
}
`;

exports[`Model E2E Test common functions Test server getAncestors() 1`] = `
[
  "server=backend,app=test",
  "app=test",
  "image=image:0.0.1,app=test",
]
`;

exports[`Model E2E Test common functions Test server getBoundaryMembers() 1`] = `
[
  "server=backend,app=test",
  "app=test",
  "image=image:0.0.1,app=test",
]
`;

exports[`Model E2E Test common functions Test server getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test server getContext() 1`] = `"server=backend,app=test"`;

exports[`Model E2E Test common functions Test server getParents() 1`] = `
[
  "app",
]
`;

exports[`Model E2E Test common functions Test server synth() 1`] = `
{
  "image": {
    "context": "image=image:0.0.1,app=test",
  },
  "serverKey": "backend",
}
`;

exports[`Model E2E Test common functions Test service getAncestors() 1`] = `
[
  "service=testService,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test service getBoundaryMembers() 1`] = `
[
  "service=testService,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test service getChildren() 1`] = `[]`;

exports[`Model E2E Test common functions Test service getContext() 1`] = `"service=testService,app=test"`;

exports[`Model E2E Test common functions Test service getParents() 1`] = `
[
  "app",
]
`;

exports[`Model E2E Test common functions Test service synth() 1`] = `"Method not implemented! Use subclass"`;

exports[`Model E2E Test common functions Test support getAncestors() 1`] = `
[
  "support=nginx,app=test",
  "app=test",
]
`;

exports[`Model E2E Test common functions Test support getBoundaryMembers() 1`] = `
[
  "support=nginx,app=test",
  "app=test",
  "deployment=nginx@v1,support=nginx,app=test",
  "execution=nginx@v1_qa,deployment=nginx@v1,support=nginx,app=test,environment=qa,region=region-1,app=test",
  "image=image:0.0.1,app=test",
  "environment=qa,region=region-1,app=test",
  "region=region-1,app=test",
]
`;

exports[`Model E2E Test common functions Test support getChildren() 1`] = `
[
  "deployment",
]
`;

exports[`Model E2E Test common functions Test support getContext() 1`] = `"support=nginx,app=test"`;

exports[`Model E2E Test common functions Test support getParents() 1`] = `
[
  "app",
]
`;

exports[`Model E2E Test common functions Test support synth() 1`] = `
{
  "applicationType": "nginx",
  "serverKey": "nginx",
}
`;

exports[`Model E2E Test getAncestors() should include parent of parent as ancestors 1`] = `
[
  "environment=env-0,region=region-0,app=app",
  "region=region-0,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should include region as ancestor of service when a dependency exists between them 1`] = `
[
  "service=service,app=app",
  "region=region,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getAncestors() should not include service as ancestor of region when a dependency exists between them 1`] = `
[
  "region=region,app=app",
  "app=app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include region in server boundary after an execution is added 1`] = `
[
  "server=server-0,app=test-app",
  "app=test-app",
  "image=test:test,app=test-app",
  "deployment=deployment-0,server=server-0,app=test-app",
  "execution=deployment-0_env-0,deployment=deployment-0,server=server-0,app=test-app,environment=env-0,region=region-0,app=test-app",
  "environment=env-0,region=region-0,app=test-app",
  "region=region-0,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include server in region boundary after an execution is added 1`] = `
[
  "region=region-0,app=test-app",
  "app=test-app",
  "environment=env-0,region=region-0,app=test-app",
  "execution=deployment-0_env-0,deployment=deployment-0,server=server-0,app=test-app,environment=env-0,region=region-0,app=test-app",
  "image=test:test,app=test-app",
  "deployment=deployment-0,server=server-0,app=test-app",
  "server=server-0,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should include the common model to the boundary in literal sense 1`] = `
[
  "region=region-0,app=test-app",
  "app=test-app",
  "environment=qa,region=region-0,app=test-app",
  "region=region-1,app=test-app",
]
`;

exports[`Model E2E Test getBoundaryMembers() should not include server in region boundary 1`] = `
[
  "region=region-0,app=test-app",
  "app=test-app",
]
`;
